--- a/MatZip/WebContent/res/css/common.css
+++ b/MatZip/WebContent/res/css/common.css
@@ -2,33 +2,42 @@
 
 * { box-sizing: border-box; }
 h1, h2, h3, h4, h5, h6, p, ul, dl, dd, input, th, td { margin: 0; padding: 0; } 
-html, body { padding: 0; margin: 0; 
-			  width: 100%; height: 100%; }
+html, body { 
+	padding: 0; margin: 0; 
+    width: 100%; height: 100%; }
 
-@font-face { font-family: 'GmarketSansBold';
-    		 src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
-    		 font-weight: normal;
-    	 	 font-style: normal; }
+@font-face { 
+	font-family: 'GmarketSansBold';
+   	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal; }
     	 	 
-@font-face { font-family: 'watch'; 
-			 src: url("/res/webfont/koverwatch.ttf"); 
-			 font-style: normal;  }
-			
-@font-face { font-family: 'Bazzi';
- 			 src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/Bazzi.woff') format('woff');
-    		 font-weight: normal;
-    		 font-style: normal; }
+@font-face {
+    font-family: 'yg-jalnan';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+    font-weight: normal;
+    font-style: normal; }
             
-			 
+@font-face { 
+	font-family: 'Bazzi';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/Bazzi.woff') format('woff');
+	font-weight: normal;
+  	font-style: normal; }
+            
 .ml5 { margin-left: 5px; }
 .ml10 { margin-left: 10px; }
 .ml15 { margin-left: 15px; }
 .ml30 { margin-left: 30px; }
 
-a { text-decoration: none; color: black; 
+.bg_black {
+	background-color: #000;
+}
+
+a { 
+	text-decoration: none; color: black; 
 	font-family: 'GmarketSansBold'; font-size: 1.3em; }
 
-input { font-family: 'watch'; font-size: 1.4em; }
+input { font-family: 'yg-jalnan'; font-size: 1.2em; }
 #container { display: flex; flex-direction: column; width: 100%; height: 100%; 
 			  font-family: 'Bazzi'; font-size: 1.3em; }
 
