--- a/MatZip/WebContent/res/css/restaurant.css
+++ b/MatZip/WebContent/res/css/restaurant.css
@@ -7,6 +7,35 @@
 	padding: 5px;
 }
 
+.menuList {
+	display: flex;
+	height: 70px;
+}
+
+.menuList .menuItem {
+	display: inline-block;
+	width: 70px;
+	height: 70px;
+	color: white;
+}
+
+.menuList .menuItem:not(:first-child) { margin-left: 4px; }
+
+.menuList .menuItem img {
+	width: 100%;
+	height: 100%;
+}
+
+.menuList .menuItem .moreCnt {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.restaurant-detail { padding: 5px 0 10px 0; }
+
 .recMenuContainer > .recMenuItem {
 	width: 150px;
 	height: 90px;
@@ -25,9 +54,12 @@
 	width: 100%;
 	height: 30px;
 }
-.recMenuContainer > .recMenuItem > .delIcontainer {
+.recMenuContainer > .recMenuItem > .delIconContainer {
 	cursor: pointer;
 	position: absolute;
 	top: 5px;
 	right: 5px;
+}
+.recMenuContainer > .recMenuItem > .delIconContainer:hover {
+	border: 1px solid black;
 }
